--- a/examples/0.intro.html
+++ b/examples/0.intro.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <title>0.intro</title>
   <style>
     canvas {
