--- a/examples/5.images.html
+++ b/examples/5.images.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-  <title>images.html</title>
+  <title>5.images</title>
   <script>
     /*
     HTML5 Canvas is a immediate mode...
@@ -31,6 +31,12 @@
     
     window.addEventListener('DOMContentLoaded', draw);
   </script>
+  <style>
+    canvas {
+      border: 1px solid #CCC;
+      box-shadow: 3px 5px 5px #CCC;
+    }
+  </style>
 </head>
 <body></body>
 </html>
