--- a/examples/animation.html
+++ b/examples/animation.html
@@ -24,15 +24,8 @@
       <input id="animateButton" type="button" value="Animate" />
     </div>
     <canvas id="canvas" width="750" height="500">
-      Canvas not support
+      Canvas not supported.
     </canvas>
-    <!--<div>
-      <img id="firefox" src="../images/firefox.png" />
-      <img id="" src="../images/chrome.png" />
-      <img src="../images/ie.png" />
-      <img src="../images/safari.png" />
-      <img src="../images/opera.png" />
-    </div>-->
     <script>
       requestAnimationFrame =
         window.requestAnimationFrame       ||
