semicolons, should've used coffeescript

--- a/examples/0.intro.html
+++ b/examples/0.intro.html
@@ -17,7 +17,7 @@
       
       var format = 'image/png';
       var quality = 0.75;
-      var dataURL = canvas.toDataURL(format, quality)
+      var dataURL = canvas.toDataURL(format, quality);
       buildImageFromDataUrl(dataURL);
       
       // We can even have canvases in memory, not drawn to screen.
