--- a/examples/sprite.html
+++ b/examples/sprite.html
@@ -22,7 +22,7 @@
     // animations are dropped, but it's not running once ever 16.6ms.
     function lessCrappyAnimation () {
       // Animation logic...
-      setTimeOut(lessCrappyAnimation, 1000 / 60)
+      setTimeOut(lessCrappyAnimation, 1000 / 60);
     }
     
     // This compensates for long running callbacks, but if your callback takes
